--- a/part1/Makefile
+++ b/part1/Makefile
@@ -1,1 +1,8 @@
-Insert the Makefile here
+output: myshell.o
+	gcc myshell.o -o myshell
+
+myshell.o: myshell.c
+	gcc -c myshell.c
+
+clean:
+	rm *.o myshell
