--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,1 +1,8 @@
-Insert the Makefile here
+output: multiThreaded.o
+	gcc multiThreaded.o -o multiThreaded
+
+multiThreaded.o: multiThreaded.c
+	gcc -c multiThreaded.c
+
+clean:
+	rm *.o myshell	
