Finished step 1 of part 2

--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,8 +1,5 @@
-output: multiThreaded.o
-	gcc multiThreaded.o -o multiThreaded
-
-multiThreaded.o: multiThreaded.c
-	gcc -c multiThreaded.c
+output: pthreads-1.c
+	gcc pthreads-1.c -o pthreads-1
 
 clean:
-	rm *.o multiThreaded	
+	rm *.o pthreads-1
