Start of step2 from Part 2 of the project

--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,5 +1,6 @@
-output: pthreads-1.c
+output: pthreads-1.c pthreads-2.c
 	gcc pthreads-1.c -o pthreads-1
+	gcc pthreads-2.c -o pthreads-2
 
 clean:
-	rm *.o pthreads-1
+	rm *.o pthreads-1 pthreads-2
