pushing code to use in linux comp

--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,6 +1,6 @@
 output: pthreads-1.c pthreads-2.c
-	gcc pthreads-1.c -o pthreads-1
-	gcc pthreads-2.c -o pthreads-2
+	gcc -std=c99 pthreads-1.c -o pthreads-1
+	gcc -std=c99 pthreads-2.c -o pthreads-2
 
 clean:
 	rm *.o pthreads-1 pthreads-2
